fslclaimsassetv2/objects/DE_Claim_Product__c.object
<CustomObject>
    <fields>
        <fullName>DE_Amount__c</fullName>
        <label>Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DE_Claim__c</fullName>
        <label>Claim Number</label>
        <referenceTo>DE_Claim__c</referenceTo>
        <relationshipLabel>Claim Products</relationshipLabel>
        <relationshipName>Claim_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DE_Product_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Item</label>
        <referenceTo>ProductItem</referenceTo>
        <relationshipLabel>Claim Products</relationshipLabel>
        <relationshipName>Claim_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DE_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Claim Products</relationshipLabel>
        <relationshipName>Claim_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DE_Quantity__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DE_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DE_Total_Amount__c</fullName>
        <formula>DE_Amount__c *  DE_Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Claim Product</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Claim Product Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>